sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: '<-' expected but '=' found.
for(i=0 to getNombreValeurs()-1){
     ^AlgBubbleSort1:10: error: illegal start of simple expression
}
^